RESOLVED FIXED75312
getComputedStyle for border-style is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75312
Summary getComputedStyle for border-style is not implemented.
Alexis Menard (darktears)
Reported 2011-12-28 06:55:45 PST
getComputedStyle for border-style is not implemented.
Attachments
Patch (7.74 KB, patch)
2011-12-28 06:57 PST, Alexis Menard (darktears)
kling: review+
Alexis Menard (darktears)
Comment 1 2011-12-28 06:57:03 PST
Alexis Menard (darktears)
Comment 2 2011-12-28 12:18:20 PST
Note You need to log in before you can comment on or make changes to this bug.