getComputedStyle for border-style is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75312

Reviewed by Andreas Kling.

Source/WebCore:

Implement getComputedStyle for border-style.

Test: fast/css/getComputedStyle/getComputedStyle-border-style-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to cover that we return correct values.

* fast/css/getComputedStyle/getComputedStyle-border-style-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-border-style-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103775 268f45cc-cd09-0410-ab3c-d52691b4dbfc